--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,8 @@
 <script src="http://maps.google.com/maps/api/js"></script>
 <!--script src="http://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script-->
 <script src="js/ng-map.min.js"></script>
+<script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
+<script src="lib/ionic-timepicker/dist/ionic-timepicker.bundle.min.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controllers.js"></script>
 <script src="js/controllerCaravanas.js"></script>
